Adding profesional projects

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 						<h1>Hi, my name is Joe Mills</h1>
 						<p>
 							<span class="image left"><img src="images/JosephMills.jpg"></img></span>
-							I'm a Computer Science Graduate (graduated 2020) and I have a passion for games development and animation.</p>
+							I'm a Mid level programmer with passion for games development.
+						</p>
 						<ul class="actions">
 							<li><a href="#main" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -40,7 +41,7 @@
 							<li class="active"><a href="index.html">My portfolio</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/joseph-mills-948ba714a/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://www.linkedin.com/in/joseph-mills-perjoeadastra/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://github.com/PerJoeAdAstra" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 							<li><a href="https://itch.io/profile/plucky" class="icon brands fa-itch-io"><span class="label">Itch</span></a></li>
 							<li><a href="https://soundcloud.com/plucky_tunes" class="icon brands fa-soundcloud"><span class="label">soundcloud</span></a></li>
@@ -56,15 +57,17 @@
 									<h2>Background</h2>
 								</header>
 								<p>
+									I've been working in the games industry for 3 years and have worked on a variety of projects from DLC, console ports to full production games.
+								</p>
+								<header class="minor">
+									<h2>Education</h2>
+								</header>
+								<p>
 									I graduated from the <a href=https://www.bristol.ac.uk/>University of Bristol</a> with First-Class Honours in <a href=http://www.bristol.ac.uk/study/undergraduate/computer-science/meng-comp-sci/> MEng Computer Science </a>.
 								</p>
-								<p>
-									My passion for games development fully flourished in my third
-									year during the year long games project module in which I and six
-									other created the game "Watson". Since then I have competed in
-									a team gamejam and since graduating have begun making my own
-									games as can be seen below.
-								</p>
+								<header class="minor">
+									<h2>Hobbies</h2>
+								</header>
 								<p>
 									When I'm not working on game related projects, I enjoy playing
 									and making music, having played trombone in a
@@ -79,7 +82,7 @@
 								<ul class="actions special">
 									<li><a href="https://github.com/PerJoeAdAstra" class="button large">Github</a></li>
 									<li><a href="https://itch.io/profile/plucky" class="button large">Itch.io page</a></li>
-									<li><a href="https://www.linkedin.com/in/joseph-mills-948ba714a/" class="button large">LinkedIn</a></li>
+									<li><a href="https://www.linkedin.com/in/joseph-mills-perjoeadastra/" class="button large">LinkedIn</a></li>
 								</ul>
 							</article>
 
@@ -94,34 +97,74 @@
 										<th>Misc</th>
 									</tr>
 									<tr>
-										<td>C</td>
-										<td>Unity 3D</td>
+										<td>C++</td>
+										<td>Unreal Engine</td>
 										<td>Japanese (Conversational, limited professional proficiency)</td>
 									</tr>
 								<tr>
-									<td>C++</td>
-									<td>Autodesk Maya</td>
-								</tr>
-								<tr>
 									<td>C#</td>
-									<td>Linux (Debian, Ubuntu, CentOS)</td>
+									<td>Unity</td>
 								</tr>
 								<tr>
 									<td>Python</td>
+									<td>Autodesk Maya</td>
+								</tr>
+								<tr>
+									<td></td>
+									<td>Linux (Debian, Ubuntu, CentOS)</td>
+								</tr>
+								<tr>
+									<td></td>
+									<td>Git</td>
+								</tr>
+								<tr>
+									<td></td>
+									<td>Perforce</td>
+								</tr>
+								<tr>
+									<td></td>
 									<td>Unix Command Line</td>
-								</tr>
-								<tr>
-									<td>Java</td>
-									<td>Git (GitHub, GitLab)</td>
-								</tr>
-								<tr>
-									<td>CSS, HTML, SQL</td>
 								</tr>
 								</table>
 							</article>
 
 						<!-- Posts -->
 							<section class="posts">
+								<article>
+									<header>
+										<h2><a href="https://www.aurochdigital.com/warhammer-boltgun">Boltgun</a></h2>
+									</header>
+									<a href="https://www.aurochdigital.com/warhammer-boltgun" class="image fit"><img src="images/Boltgun.png" alt="" /></a>
+									<p>
+										Boltgun is a retro first person shooter set in the Warhammer 40k universe created by Auroch Digital, published by Focus Entertainment.
+									</p>
+									<p>
+										I was a programmer on Boltgun from Pre-Production to full release.
+										The team was made up of generalist programmers meaning I touched a wide variety of areas
+										of the project from AI to UI and everywhere inbetween.
+									</p>
+									<ul class="actions special">
+										<li><a href="https://www.aurochdigital.com/warhammer-boltgun" class="button large">Developer page</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2><a href="https://www.aurochdigital.com/blog/2021/5/20/mars-horizon-free-update">Mars Horizon: Expanded Horizon</a></h2>
+									</header>
+									<a href="https://www.aurochdigital.com/blog/2021/5/20/mars-horizon-free-update" class="image fit"><img src="images/MarsHorizon_ExpandedHorizons.png" alt="" /></a>
+									<p>
+										Mars Horizon is a Space Agency management simulation game created by Auroch Digital, published by The Irregular Corporation.
+									</p>
+									<p>
+										I worked on Mars Horizon post release on the Expanded Horizon update.
+										I added in the ironcore and sandbox modes to the game.
+										I adapted the existing asset bundling system to support this and future expansions.
+									</p>
+									<ul class="actions special">
+										<li><a href="https://www.aurochdigital.com/marshorizonvideogame" class="button large">Developer Page</a></li>
+										<li><a href="https://www.aurochdigital.com/blog/2021/5/20/mars-horizon-free-update" class="button large">Exansion Developer Blog</a></li>
+									</ul>
+								</article>
 								<article>
 									<header>
 										<h2><a href="https://plucky.itch.io/warlords-of-the-wastes">Warlords of the Wastes</a></h2>
@@ -296,7 +339,7 @@
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="https://www.linkedin.com/in/joseph-mills-948ba714a/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://www.linkedin.com/in/joseph-mills-perjoeadastra/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://github.com/PerJoeAdAstra" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 									<li><a href="https://itch.io/profile/plucky" class="icon brands fa-itch-io"><span class="label">Itch</span></a></li>
 									<li><a href="https://soundcloud.com/plucky_tunes" class="icon brands fa-soundcloud"><span class="label">soundcloud</span></a></li>
