Fixing page headers

--- a/index.html
+++ b/index.html
@@ -59,15 +59,11 @@
 								<p>
 									I've been working in the games industry for 3 years and have worked on a variety of projects from DLC, console ports to full production games.
 								</p>
-								<header class="minor">
-									<h2>Education</h2>
-								</header>
+								<h2>Education</h2>
 								<p>
 									I graduated from the <a href=https://www.bristol.ac.uk/>University of Bristol</a> with First-Class Honours in <a href=http://www.bristol.ac.uk/study/undergraduate/computer-science/meng-comp-sci/> MEng Computer Science </a>.
 								</p>
-								<header class="minor">
-									<h2>Hobbies</h2>
-								</header>
+								<h2>Hobbies</h2>
 								<p>
 									When I'm not working on game related projects, I enjoy playing
 									and making music, having played trombone in a
@@ -87,7 +83,7 @@
 							</article>
 
 							<article class="post featured">
-								<header class="minor">
+								<header class="major">
 									<h2>Skills</h2>
 								</header>
 								<table>
